--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^8.0.2",
     "eslint": "^5.6.0",
     "eslint-config-piecioshka": "^2.0.1",
+    "is-promise": "^2.1.0",
     "jest-cli": "^23.6.0",
     "jsdom": "^12.0.0",
     "json-server": "^0.14.0",
@@ -26,6 +27,7 @@
   },
   "scripts": {
     "test": "jest",
+    "test-watch": "jest --watchAll",
     "start:back-end": "json-server --watch db.json"
   },
   "keywords": [],
