add fixture, mock fetch

--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
   },
   "scripts": {
     "test": "jest",
-    "test-ci": "json-server db.json & npm run test",
+    "test-ci": "npm run test",
     "test-watch": "jest --watchAll",
-    "start:backend": "json-server --watch db.json",
     "start:frontend": "webpack -w frontend/scripts/main.js -o frontend/dist/bundle.js --mode development"
   },
   "keywords": [],
